--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,8 +5,9 @@ body {
   font-family: 'Titillium Web', arial, sans-serif;
   font-weight: 100;
   height: 100%;
-  background-color: #1bf4fb;
+  background-color: #fff;
 }
+
 img {
 	max-width: 100%;
 	height: auto;
@@ -18,38 +19,46 @@ img {
 	min-height: 100px;
 	margin: auto;
 	overflow: auto;
+	text-align: center;
 }
 #instructions {
-	min-height: 100px;
-	margin: 2em auto;
-	background-color: #fff;
-}
-#characters, #enemies, #defender {
-	min-height: 100px;
-	margin: 2em 1%;
-	padding: 20px;
-	background-color: #fff;
-	overflow: auto;
-	text-align: center;
-	float: left;
-}
-#remaining {
-	min-height: 100px;
-	margin: 2em 1%;
-	padding: 20px;
-	background-color: #ccc;
-	overflow: auto;
-	text-align: center;
+	margin: 1em auto;
+	background-color: #f2f2f2;
+	padding: 20px 0;
 	clear: both;
-}
+	width: 100%;
 
+}
+#characters, #enemies {
+	min-height: 100px;
+	margin: 1em 1%;
+	padding: 20px;
+	overflow: auto;
+	text-align: center;
+	display: inline-block;
+}
 
 #attack {
+	display: none;
+	width: 20%;
 	min-height: 100px;
 	margin: 2em auto;
-	background-color: #fff;
+	padding: 20px;
 	float: left;
+	text-align: center;
 }
+.fight {
+	width: 38%;
+	float: left;
+	min-height: 100px;
+	min-height: 100px;
+	margin: 1em 1%;
+	padding: 20px;
+	text-align: center;
+}
+
+
+
 
 .player, .enemies, .character, .defender {
 	width: 150px;
@@ -71,4 +80,16 @@ p {
 	margin-bottom: 1em;
 	text-align: center;
 }
+button.attack {
+	margin-top: 40%;
+	border: 2px solid red;
+	background-color: transparent;
+	padding: 5px 20px;
+	color: red;
+	font-size: 1.5em;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+.show {display: block!important;}
+.hide {display: none!important;}
 
